my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/20040308-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20040308-1.c:7:9: error: fields must have a constant size: 'variable length array in structure' extension will never be supported
    7 |     int i[n];
      |         ^
1 error generated.
